...
import com.tehuberz.weather.lite.ui.state.WeatherDataState
import com.tehuberz.weather.lite.ui.state.WeatherUiState
import com.tehuberz.weather.lite.ui.theme.AdventureTheme
import com.tehuberz.weather.lite.util.UiText
import com.tehuberz.weather.lite.viewmodel.WeatherViewModel

const val TAG_LOCATION_DROPDOWN = "LocationDropdown"

const val TAG_CITY_DROPDOWN = "CityDropdown"
const val TAG_LOCATION_DROPDOWN_OUTLINE = "LocationDropdownOutline"
const val TAG_WEATHER_DESC = "WeatherDescriptionText"
const val TAG_WEATHER_TEMP = "WeatherTemperatureText"
const val TAG_ERROR_TEXT = "ErrorText"
const val TAG_PROGRESS = "ProgressIndicator"
const val TAG_LOCATION_DESC = "LocationDescriptionText"
const val TAG_REFRESH_BUTTON = "RefreshButton"
const val TAG_CURRENT_LOCATION_BUTTON = "CurrentLocationButton"

@Composable
fun WeatherScreen(
    viewModel: WeatherViewModel = hiltViewModel(),
    onSettingsClick: () -> Unit,
...
