...
                    stateName = "Georgia",
                    stateAbbreviation = "GA",
                    cityName = "Atlanta",
                ),
                Bookmark(
                    id = 2,
                    stateName = "New York",
                    stateAbbreviation = "NY",
                    cityName = "New York",
                ),
                Bookmark(
                    id = 3,
                    stateName = "California",
...
